subprojects {

    apply plugin: "java-gradle-plugin"
    apply plugin: 'maven-publish'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(8)
        }
    }

    group = "com.ceragon"
    version = "1.0-SNAPSHOT"

    repositories {
        // Use Maven Central for resolving dependencies.
        mavenLocal()
        mavenCentral()
    }

    dependencies {
        // Use JUnit Jupiter for testing.
        testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'

        implementation 'org.apache.commons:commons-lang3:3.12.0'
        implementation 'org.apache.velocity:velocity:1.7'
        implementation 'org.yaml:snakeyaml:1.29'
        implementation 'commons-io:commons-io:2.11.0'

        compileOnly 'org.projectlombok:lombok:1.18.20'
        annotationProcessor 'org.projectlombok:lombok:1.18.20'
    }
    test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
    }


    publishing {
        repositories {
            mavenLocal()
        }
    }
}